[FIX] web: list view optional columns icon position
Before this commit, the column customization icon sometimes covers the
last column header in list views (or the 'ordering carret' icon).

Steps to reproduce:
- open Survey in list view
=> Avg Score column header overlaps with the icon

This commit adapts the headers last column's padding and the
customization icon's width to match each other and avoid overlapping.

It also adapts the vertical positionning of the icon.

task-2816987

Part-of: odoo/odoo#90584

--- a/addons/web/static/src/legacy/scss/list_view.scss
+++ b/addons/web/static/src/legacy/scss/list_view.scss
@@ -337,7 +337,7 @@
     // Optional fields
     &.o_list_optional_columns {
         th:last-child {
-            padding-right: 15px;
+            padding-right: calc(#{$oi-fw-ratio} * var(--oi-font-size, #{$oi-default-size})); // matches the .oi-fw width calculation
         }
     }
 
@@ -347,9 +347,8 @@
 
     .o_optional_columns_dropdown_toggle {
         cursor: pointer;
-        padding: 0 5px;
-        text-align: center;
-        line-height: 30px;
+        padding-top: calc(#{$table-cell-padding-sm} + #{$table-border-width}); // matches the .table header-cell top box-size
+        padding-bottom: calc(#{$table-cell-padding-sm} + #{2 * $table-border-width}); // matches the .table header-cell bottom box-size
         z-index: 1; // must be over the resize handle
     }
 
